src/bot-builder/style_node.css
.custom-modal-1 {
  width: 100vw;
  background-color: rgba(0, 0, 0, 0.3);
  height: 100%;
}
.sidebar-1 {
  width: 700px;
  min-height: 100vh;
  background-color: #f2f4f7;
  padding: 0px 20px;
  margin-left: auto;
  margin-right: 0;
}
.row {
  display: flex;
}
.row .col {
  flex: 1;
}
.search {
  box-shadow: 0 0 1px rgb(0 0 0 / 12%), 0 1px 6px rgb(0 0 0 / 3%),
    0 6px 10px -8px rgb(0 0 0 / 10%);
}

input[type="checkbox"] {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
  z-index: -1;
  padding: 0;
  margin: 0;
}
/* Accordion styles */
.tabs {
  border-radius: 4px;
  overflow: hidden;
  box-shadow: 0 0 1px rgb(0 0 0 / 12%), 0 1px 6px rgb(0 0 0 / 3%),
    0 6px 10px -8px rgb(0 0 0 / 10%);
  display: block;
}

.tab {
  width: 100%;
  color: #343f44;
  overflow: hidden;
}
.tab-label {
  display: flex;
  justify-content: space-between;
  color: #444444;
  padding: 1em;
  background: #ffffff;
  font-weight: bold;
  cursor: pointer;
  margin-bottom: 0;
  border-bottom: 1px solid #f2f4f7;
  border-top: 1px solid #f2f4f7;
}

[data-desc] {
  position: relative;
  cursor: default;
  margin-top: -5px;
  margin-left: 7px;
}
[data-desc]::after {
  content: attr(data-desc);
  overflow: hidden;
  font-size: 14px;
  padding: 10px;
  background-color: #e7ecf3;
  border-radius: 4px;
  margin-left: 11px;
  display: none;
  transition: 0.2s;
  z-index: 1;
  opacity: 0;
}
[data-desc]::before {
  content: "";
  position: absolute;
  width: 15px;
  height: 15px;
  left: 2px;
  top: -5px;
  z-index: 0;
  border: 15px solid transparent;
  border-right: 15px solid #e7ecf3;
  display: none;
  border-radius: 0;
  transition: 0.2s;
  opacity: 0;
}
[data-desc]:hover::after,
[data-desc]:hover::before {
  display: inline;
  opacity: 1;
}
#user-says::after {
  font-size: 12.5px;
}

.tab-label:hover {
  background: #ffffff;
}
.tab-label::after {
  content: "❯";
  width: 1em;
  height: 1em;
  text-align: center;
  transition: all 0.35s;
}
.tab-content {
  max-height: 0;
  padding: 0 1em;
  color: #222222;
  background: #f2f4f7;
  transition: all 0.35s;
  text-align: left;
}
.tab-close {
  display: flex;
  justify-content: flex-end;
  padding: 1em;
  font-size: 0.75em;
  background: #ffffff;
  cursor: pointer;
}
.tab-close:hover {
  background: #ffffff;
}

input:checked + .tab-label {
  background: #ffffff;
}
input:checked + .tab-label::after {
  transform: rotate(90deg);
}
input:checked ~ .tab-content {
  max-height: 200vh;
  padding: 1em;
}

#save {
  position: relative;
  top: auto;
  bottom: 35px;
  padding: 5px 10px;
  left: auto;
  right: -190px;
  width: 80px;
}
#close {
  position: relative;
  top: auto;
  bottom: -35px;
  padding: 5px 10px;
  left: auto;
  right: -280px;
  width: 80px;
}

.apps-grid-title {
  margin-top: 0;
  margin-bottom: 1rem;
  color: #9baeb8;
}
.tr-blognav-container {
  background-color: #ffffff;
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.12), 0 1px 6px rgba(0, 0, 0, 0.03),
    0 6px 10px -8px rgba(0, 0, 0, 0.1);
}

.tr-input {
  border-radius: 4px;
  background-color: #ffffff;
}
.tr-input:focus {
  background-color: #ffffff;
  border: 1px solid #58bbf0 !important;
}
#button-name:focus {
  border: 1px solid red !important;
}

.apps-grid {
  background-color: #ffffff;
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.12), 0 1px 6px rgba(0, 0, 0, 0.03),
    0 6px 10px -8px rgba(0, 0, 0, 0.1);
}
.apps-grid label {
  color: #58bbf0;
  font-size: 17.5px;
  cursor: pointer;
  font-weight: 500;
}
.custom-styles {
  min-height: 140px;
  border-radius: 4px;
}

input[type="file"] {
  display: none;
}
.textarea {
  height: auto;
  min-height: 38px;
  margin-bottom: 5px;
  max-height: 150px;
}
.hidden {
  display: none;
}
.apps-card-app {
  height: 80px !important;
}
.apps-card-meta {
  padding-right: 0;
}
.tr-themes-uploadbtn {
  position: relative;
  margin-top: 10px;
  color: #ffffff;
  width: 120px !important;
  height: 33px !important;
  margin-left: 4px;
}
.tr-themes-uploadbtn::after {
  position: absolute;
  top: -16px;
  left: auto;
  right: -8px;
  content: "\00d7";
  font-size: 2.5rem;
  color: #222222;
  background: honeydew;
  visibility: hidden;
}
.QRBtn {
  position: relative;
}

.delete-qr {
  position: absolute;
  color: #c25;
  left: 118px;
  z-index: 1000;
  font-weight: 900;
  display: none;
  cursor: pointer;
}
.qr-button {
  position: relative;
}
.qr-button:hover .delete-qr {
  display: inline-block;
}
.tr-themes-uploadbtn input::placeholder {
  color: #ffffff;
}
#QR {
  border: none;
  counter-reset: #333333;
  width: 400px;
  height: 38px;
}
#QR::placeholder {
  color: #bbbbbb;
}
#QR:active,
#QR:focus {
  border: none;
  outline: none;
}
#actions::after {
  content: "asbs";
}

.emoji-picker {
  position: absolute;
  left: 50%;
  /* top: 0px; */
  bottom: 30px;
  display: none;
  z-index: 1000000 !important;
}
.react-tags {
  position: relative;
  padding: 6px 0 0 6px;
  border: 1px solid #d6e3eb;
  border-radius: 4px;
  font-size: 1em;
  height: 50px;
  background-color: #ffffff;
  cursor: text;
}
.react-tags__selected {
  display: inline;
}
.react-tags__search {
  display: inline-block;
  padding: 7px 2px;
  margin-bottom: 6px;
  max-width: 100%;
  background-color: #ffffff;
}

.react-tags__selected-tag {
  display: inline-block;
  box-sizing: border-box;
  margin: 0 6px 6px 0;
  padding: 6px 8px;
  border: 1px solid #d1d1d1;
  border-radius: 2px;
  background: #f1f1f1;
  font-size: inherit;
  line-height: inherit;
}

.react-tags__selected-tag:after {
  content: "\2715";
  color: #aaa;
  margin-left: 8px;
}

.react-tags__selected-tag:hover,
.react-tags__selected-tag:focus {
  border-color: #b1b1b1;
}

.react-tags__search-input {
  max-width: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  outline: none;
  font-size: inherit;
  line-height: inherit;
}
.react-tags__search-input::placeholder {
  color: white;
}
.react-tags__suggestions {
  position: absolute;
  list-style: none;
  background-color: white;
}
.react-tags__suggestions ul {
  list-style: none;
  background-color: white;
  padding-right: 20px;
}
.is-active {
  background-color: white;
}
.is-active ul {
  list-style: none;
  padding-right: 20px;
}
li {
  cursor: pointer;
}
.option {
  background-color: #ffffff;
  padding: 5px 10px;
  cursor: pointer;
}
.option:hover {
  background-color: #d3d3d3;
}
textarea {
  resize: none;
}
.card-img:hover {
  background-color: #d3d3d3;
}
.slick-prev:before,.slick-next:before{
  color: black;
}
.AddCard{
  width: 230px;
  height:350px;
  display: flex;
  flex-direction:column;
  justify-content:center;
  background-color:non;
}
.AddCard-area{
  height: 75%;
  margin:4px;
  background-color: #eeeeee;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,.08),0 2px 10px 0 rgba(0,0,0,.08);
  border-radius: 4px;
  cursor: pointer;
}
.delete-card-btn{
  position: absolute;
  color: rgb(204, 34, 85);
  z-index: 1000;
  display: none;
  cursor: pointer;
  font-weight: 900;
}
.card-button:hover .delete-card-btn{
  display: inline-block;
}
.card-delete{
  display: none;
  position: absolute;
  right: 0px;
  background-color: white;
  padding: 4px;
}
.card:hover .card-delete{
  display:inline-block;
}

